# MORAI_competition

./: .gitignore
devel/: .catkin  .rosinstall  local_setup.sh  setup.fish
devel/include/prediction/: PredictedObjectPath.h  PredictedObjectPathList.h  TrackedObjectPose.h  TrackedObjectPoseList.h  TrackedPoint.h
devel/lib/control/: pure_pursuit
devel/lib/pkgconfig/: auto_driving.pc  beginner_tutorials.pc  control.pc  morai_msgs.pc  path_planning.pc  prediction.pc
devel/lib/prediction/: object_tracker_node  test_node
devel/lib/python3/dist-packages/prediction/msg/: _PredictedObjectPath.py  _PredictedObjectPathList.py  _TrackedObjectPose.py  _TrackedObjectPoseList.py  _TrackedPoint.py  __init__.py
devel/share/auto_driving/cmake/: auto_driving-msg-paths.cmake  auto_drivingConfig.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/common-lisp/ros/prediction/msg/: PredictedObjectPath.lisp  PredictedObjectPathList.lisp  TrackedObjectPose.lisp  TrackedObjectPoseList.lisp  TrackedPoint.lisp  _package.lisp  _package_PredictedObjectPath.lisp  _package_PredictedObjectPathList.lisp  _package_TrackedObjectPose.lisp  _package_TrackedObjectPoseList.lisp  _package_TrackedPoint.lisp  prediction-msg.asd
devel/share/control/cmake/: controlConfig.cmake
devel/share/gennodejs/ros/morai_msgs/msg/: _index.js
devel/share/gennodejs/ros/morai_msgs/srv/: _index.js
devel/share/gennodejs/ros/prediction/msg/: PredictedObjectPath.js  PredictedObjectPathList.js  TrackedObjectPose.js  TrackedObjectPoseList.js  TrackedPoint.js  _index.js
devel/share/morai_msgs/cmake/: morai_msgs-msg-extras.cmake  morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/path_planning/cmake/: path_planningConfig.cmake
devel/share/prediction/cmake/: prediction-msg-extras.cmake  prediction-msg-paths.cmake  predictionConfig.cmake
devel/share/roseus/ros/auto_driving/: manifest.l
devel/share/roseus/ros/beginner_tutorials/: manifest.l
devel/share/roseus/ros/control/: manifest.l
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/roseus/ros/path_planning/: manifest.l
devel/share/roseus/ros/prediction/: manifest.l
src/auto_driving/: CMakeLists.txt  package.xml
src/auto_driving/launch/: final.launch  parking_enter.launch
src/auto_driving/rviz/: final.rviz
src/control/: CMakeLists.txt  package.xml
src/control/include/: longitudinal_control_vel.hpp  pid_control.hpp  pure_pursuit.hpp
src/control/src/: longitudinal_control_vel.cpp  pid_control.cpp  pure_pursuit.cpp
src/path_planning/: CMakeLists.txt  package.xml  parking.txt
src/path_planning/src/: a_star.py  dijkstra.py  dubins.py  dubins_ccrs.py  global_path_a_star.py  global_path_ccrs.py  global_path_dijkstra.py  global_path_dubins.py  global_path_pub.py  global_path_rrtstar.py  global_path_rrtstardubins.py  gpsimu_parser.py  lattice_planner.py  local_path_pub.py  mgeo_pub.py  path_maker.py  rrtstar.py  rrtstardubins.py  state_manager.py  tf_pub.py  visual_obstacle.py
src/prediction/: CMakeLists.txt
src/prediction/include/: object_tracker.hpp  state_filters.hpp  state_models.hpp
src/prediction/launch/: object_tracking_test.launch
src/prediction/msg/: PredictedObjectPath.msg  PredictedObjectPathList.msg  TrackedObjectPose.msg  TrackedObjectPoseList.msg  TrackedPoint.msg
src/prediction/rviz/: visual_test.rviz
src/prediction/src/: object_collision.py  object_tracker.cpp  object_tracker.py  object_tracker_opt.py  state_filters.cpp  state_filters.py  state_filters_opt.py  state_models.cpp  state_models.py  state_models_opt.py  test.cpp  test.py  tracker_visualize.py
(+6 files in other folders)
